objects/BMCServiceDesk__Urgency__c.object
<CustomObject>
    <description>This object allows you to store data for urgency records.</description>
    <fields>
        <fullName>BMCServiceDesk__Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to tag a record for exporting Urgency from RF Urgency Migration package.</description>
        <inlineHelpText>Select this field to allow the record to be exported from the RF Urgency Migration Pentaho package.</inlineHelpText>
        <label>Tag for Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the urgency record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Urgency</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Urgency</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Urgencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__UniqueUrgencyCheck</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNEW(),
NOT(ISBLANK(VLOOKUP( $ObjectType.BMCServiceDesk__Urgency__c.Fields.Name , $ObjectType.BMCServiceDesk__Urgency__c.Fields.Name,NULLVALUE(Name, Name)))),
IF(ISCHANGED(Name),
IF((LOWER(Name) = LOWER(VLOOKUP($ObjectType.BMCServiceDesk__Urgency__c.Fields.Name , $ObjectType.BMCServiceDesk__Urgency__c.Fields.Name,Name))&amp;&amp;LOWER(PRIORVALUE(Name)) != Lower(Name)), TRUE, FALSE),
FALSE))</errorConditionFormula>
        <errorMessage>An Urgency record with this Urgency already exists. Enter unique Urgency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__UrgencyID_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL(Name ) , ISBLANK(Name))</errorConditionFormula>
        <errorMessage>Please enter Urgency.</errorMessage>
    </validationRules>
</CustomObject>